[package]
name = "ssc"
version = "0.3.0"
description = "A CLI tool to skip a CI build that is not concerned by the latest changes."
homepage = "https://github.com/KnpLabs/should-skip-ci"
repository = "git@github.com:KnpLabs/should-skip-ci.git"
documentation = "https://github.com/KnpLabs/should-skip-ci"
authors = ["KNP Labs"]
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
simple_logger = { version = "5.0", default-features = false }

[dev-dependencies]
rand = "0.9"

[profile.release]
# @see https://stackoverflow.com/a/54842093
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
